--- a/mobilecontact.html
+++ b/mobilecontact.html
@@ -367,9 +367,15 @@
         </li>
       </ul>
       <div class="contact-social">
-        <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/nestcapitalfinance/" title="Instagram" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/company/nest-capital-finance/" title="LinkedIn" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://www.facebook.com/yourprofile" title="Facebook" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-facebook-f"></i>
+          </a>
       </div>
     </aside>
     <section class="contact-section">
