--- a/about.html
+++ b/about.html
@@ -340,6 +340,18 @@
       letter-spacing: .7px;
     }
   </style>
+   <script>
+  // Define your mobile site URL (change to your actual mobile site URL)
+  const mobileSiteUrl = "https://shaggyyyz.github.io/nestcapitalfinance-landing/mobileabout.html";
+
+  // Check if already on mobile redirect site to prevent loops
+  const isOnMobileSite = window.location.href.includes("https://shaggyyyz.github.io/nestcapitalfinance-landing/mobileabout.html");
+
+  // Detect mobile viewport width & redirect accordingly
+  if (window.matchMedia("(max-width: 768px)").matches && !isOnMobileSite) {
+    window.location.href = mobileSiteUrl;
+  }
+</script>
 </head>
 <body>
   <header>
