--- a/mobileabout.html
+++ b/mobileabout.html
@@ -36,7 +36,7 @@
       height: 60px;
       filter: brightness(0) invert(1);
       z-index: 1101;
-      margin-left: 0; /* aligned like Services page */
+      margin-left: 0;
     }
     .menu-toggle {
       display: none;
