--- a/mobileabout.html
+++ b/mobileabout.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us - Nest Capital Finance</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;600;700&display=swap" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:600,400&display=swap" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet"/>
   <style>
     body {
-      font-family: 'Fira Sans', Arial, sans-serif;
-      font-weight: 300;
-      margin: 0;
+      font-family: 'Montserrat', Arial, sans-serif;
       background: #181820;
-      color: #fff;
+      color: #e8e6ff;
+      margin: 0;
+      min-height: 100vh;
       overflow-x: hidden;
     }
     header {
@@ -36,7 +36,6 @@
       height: 60px;
       filter: brightness(0) invert(1);
       z-index: 1101;
-      margin-left: 0;
     }
     .menu-toggle {
       display: none;
@@ -65,8 +64,7 @@
     }
     .menu-panel {
       position: fixed;
-      top: 70px;
-      right: 0;
+      top: 70px; right: 0;
       width: 220px;
       height: calc(100% - 70px);
       background: #181820;
@@ -105,78 +103,69 @@
       color: #2563eb;
       background: #22232c;
     }
-    nav {
-      flex: 1;
+    main {
+      padding-top: 90px;
+      max-width: 1100px;
+      margin: 3.5rem auto 0 auto;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      box-sizing: border-box;
       display: flex;
-      gap: 2.8rem;
-      margin-top: 2.6rem;
+      flex-wrap: wrap;
+      gap: 3.5rem;
+      justify-content: center;
       align-items: flex-start;
-      padding-right: 3rem;
-      justify-content: flex-end;
     }
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-      }
-      .menu-toggle {
-        display: flex;
-      }
-    }
-  main {
-  padding-top: 130px; /* height of fixed header plus some buffer */
-  margin-left: 4rem;  /* same as logo margin-left to avoid content under logo */
-  max-width: 900px;
-  margin-right: auto;
-  margin-bottom: 2rem;
-  background: #22232c;
-  border-radius: 14px;
-  box-shadow: 0 1px 8px #0405123a;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  box-sizing: border-box;
-}
-
-    h2 {
-      text-align: center;
-      color: #b6befb;
-    }
-    /* VALUES SECTION */
-    .values-hero {
-      max-width: 1000px;
+    .mission-section, .values-hero, .team-section {
       background: #22232c;
-      padding: 2rem 1.5rem;
-      margin: 2rem auto;
-      border-radius: 14px;
-      box-shadow: 0 1px 12px #0405123a;
-      color: #e8e6ff;
+      border-radius: 16px;
+      box-shadow: 0 1px 16px #0405121a;
+      padding: 2.5rem 2.2rem 2rem 2.2rem;
+      box-sizing: border-box;
+      width: 100%;
+      margin-bottom: 0;
+      max-width: 500px;
+      flex: 1 1 320px;
     }
-    .values-hero h2 {
-      font-size: 2.6rem;
-      margin-bottom: 1rem;
-      letter-spacing: 1px;
+    .mission-section h2,
+    .values-hero h2,
+    .team-section h2 {
+      text-align: center;
+      font-size: 2.2rem;
       font-weight: 700;
+      color: #b6befb;
+      margin-bottom: 1rem;
+      letter-spacing: -1px;
     }
     .values-hero .subtitle {
       text-align: center;
-      font-size: 1.05rem;
-      color: #c0c2d4;
-      margin-bottom: 2.5rem;
-      max-width: 700px;
+      font-size: 1.07rem;
+      color: #c2c7e7;
+      margin-bottom: 2.3rem;
+      max-width: 390px;
       margin-left: auto;
       margin-right: auto;
-      line-height: 1.6;
+      line-height: 1.55;
     }
-    .values-grid {
+    .values-list {
+      color: #c2c7e7;
+      font-size: 1.07rem;
+      line-height: 1.7;
+      margin-top: 1.5rem;
+      margin-bottom: 0;
+      padding-left: 1.4rem;
+    }
+    .values-grid, .team-grid {
       display: flex;
       flex-wrap: wrap;
-      gap: 2.5rem;
+      gap: 2.3rem;
       justify-content: center;
     }
-    .value-card {
-      width: 280px;
+    .value-card, .team-member {
+      width: 255px;
       background: #2a2b36;
       border-radius: 10px;
-      padding: 2rem 1.5rem;
+      padding: 2rem 1.3rem;
       box-shadow: 0 4px 12px #191a2336;
       display: flex;
       flex-direction: column;
@@ -185,14 +174,15 @@
       opacity: 0;
       transform: translateY(60px);
       animation: fadeUp 1s forwards;
+      margin-bottom: 0;
     }
-    .value-card:nth-child(1){ animation-delay: 0.1s;}
-    .value-card:nth-child(2){ animation-delay: 0.3s;}
-    .value-card:nth-child(3){ animation-delay: 0.5s;}
-    .value-card:nth-child(4){ animation-delay: 0.7s;}
-    .value-card:nth-child(5){ animation-delay: 0.9s;}
-    .value-card:nth-child(6){ animation-delay: 1.1s;}
-    .value-card:hover {
+    .value-card:nth-child(1), .team-member:nth-child(1){ animation-delay: 0.1s;}
+    .value-card:nth-child(2), .team-member:nth-child(2){ animation-delay: 0.3s;}
+    .value-card:nth-child(3), .team-member:nth-child(3){ animation-delay: 0.5s;}
+    .value-card:nth-child(4), .team-member:nth-child(4){ animation-delay: 0.7s;}
+    .value-card:nth-child(5), .team-member:nth-child(5){ animation-delay: 0.9s;}
+    .value-card:nth-child(6), .team-member:nth-child(6){ animation-delay: 1.1s;}
+    .value-card:hover, .team-member:hover {
       transform: scale(1.05);
       box-shadow: 0 10px 25px #4a4f7f80;
     }
@@ -200,7 +190,7 @@
       to { opacity: 1; transform: translateY(0);}
     }
     .value-icon {
-      font-size: 3rem;
+      font-size: 2.7rem;
       margin-bottom: 1rem;
       color: #2563eb;
       transition: color 0.3s;
@@ -208,98 +198,67 @@
     .value-card:hover .value-icon { 
       color: #ffffff;
     }
-    .value-title {
-      font-size: 1.4rem;
+    .value-title, .team-member h4 {
+      font-size: 1.2rem;
       font-weight: 600;
-      margin-bottom: .8rem;
       color: #b6befb;
       text-align: center;
+      margin-bottom: .7rem;
     }
-    .value-desc {
-      font-size: 1.05rem;
+    .value-desc, .team-member p {
+      font-size: 1.01rem;
       color: #c0c2d4;
       text-align: center;
       line-height: 1.5;
-    }
-    /* TEAM SECTION */
-    .team-section {
-      max-width: 1000px;
-      background: #22232c;
-      padding: 2rem 1.5rem;
-      margin: 2rem auto;
-      border-radius: 14px;
-      box-shadow: 0 1px 12px #0405123a;
-    }
-    .team-section h2 {
-      text-align: center;
-      font-size: 2.6rem;
-      margin-bottom: 2rem;
-      color: #b6befb;
-      letter-spacing: 1px;
-      font-weight: 700;
-    }
-    .team-grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2.5rem;
-      justify-content: center;
-    }
-    .team-member {
-      width: 280px;
-      background: #2a2b36;
-      border-radius: 10px;
-      padding: 2rem 1.5rem;
-      box-shadow: 0 4px 12px #191a2336;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      transition: transform 0.3s cubic-bezier(.23,1.08,.66,.99), box-shadow 0.3s;
-      opacity: 0;
-      transform: translateY(60px);
-      animation: fadeUp 1s forwards;
-    }
-    .team-member:nth-child(1){ animation-delay: 0.1s;}
-    .team-member:nth-child(2){ animation-delay: 0.3s;}
-    .team-member:nth-child(3){ animation-delay: 0.5s;}
-    .team-member:nth-child(4){ animation-delay: 0.7s;}
-    .team-member:hover {
-      transform: scale(1.05);
-      box-shadow: 0 10px 25px #4a4f7f80;
+      margin-bottom: 0.2rem;
     }
     .team-member img {
-      width: 120px;
-      height: 120px;
+      width: 98px;
+      height: 98px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 1.2rem;
-      border: 3px solid #2563eb;
+      margin-bottom: 1.1rem;
+      border: 2.3px solid #2563eb;
       transition: border-color 0.3s;
     }
     .team-member:hover img {
       border-color: #ffffff;
     }
-    .team-member h4 {
-      margin: 0 0 0.5rem 0;
-      font-size: 1.4rem;
-      color: #b6befb;
-      font-weight: 600;
-      text-align: center;
+    @media (max-width: 1050px) {
+      main {
+        flex-direction: column;
+        padding-top: 130px;
+        gap: 2rem;
+      }
+      .mission-section, .values-hero, .team-section { max-width: 97vw; }
     }
-    .team-member p {
-      font-size: 1.05rem;
-      color: #c0c2d4;
-      margin: 0;
-      text-align: center;
-      line-height: 1.5;
-    }
-    @media (max-width: 900px) {
+    @media (max-width: 700px) {
+      header { padding: 1.2rem .7rem;}
+      main { gap: 1.7rem; }
+      .mission-section, .values-hero, .team-section {
+        padding: 1.2rem 1.5rem;
+        max-width: 90vw;
+      }
       .values-grid, .team-grid {
         flex-direction: column;
         align-items: center;
+        gap: 1.1rem;
       }
-      .value-card, .team-member {
-        width: 90%;
+      .value-card, .team-member { width: 95vw; }
+      .menu-toggle { display: flex; }
+      .menu-panel {
+        width: 90vw;
+        top: 70px;
+        height: calc(100% - 70px);
+        transform: translateX(100%);
+        pointer-events: none;
+        opacity: 1;
       }
+      .menu-panel.open {
+        transform: translateX(0);
+        pointer-events: auto;
+      }
+      nav { display: none; }
     }
   </style>
 </head>
@@ -320,10 +279,9 @@
     </nav>
   </header>
   <main>
-    <!-- COMPANY MISSION -->
-    <section id="mission">
+    <section class="mission-section" id="mission">
       <h2>Our Mission</h2>
-      <p>At Nest Capital Finance, we aim to make the journey to your dream property as simple and stress-free as possible.
+      <p>At Nest Capital Finance, we aim to make the journey to your dream property as simple and stress-free as possible.<br>
       Our purpose is to combine industry expertise, personal service, and access to top lenders—to deliver 5-star client results every step of the way.</p>
       <ul class="values-list">
         <li>Client-first approach, always</li>
@@ -332,8 +290,6 @@
         <li>Supporting growth, wherever you are</li>
       </ul>
     </section>
-    
-    <!-- VALUES -->
     <section class="values-hero">
       <h2>Our Values</h2>
       <p class="subtitle">We believe in empowering our clients through unwavering commitment to excellence, integrity, and service. These core values guide everything we do.</p>
@@ -370,8 +326,6 @@
         </div>
       </div>
     </section>
-    
-    <!-- TEAM -->
     <section class="team-section" id="team">
       <h2>Meet Our Team</h2>
       <div class="team-grid">
@@ -401,39 +355,34 @@
   <footer>
     &copy; 2025 Nest Capital Finance | All Rights Reserved
   </footer>
-<script>
-  const menuToggle = document.getElementById('menuToggle');
-  const menuPanel = document.getElementById('menuPanel');
-
-  menuToggle.addEventListener('click', () => {
-    menuToggle.classList.toggle('open');
-    menuPanel.classList.toggle('open');
-    menuToggle.setAttribute('aria-expanded', menuPanel.classList.contains('open'));
-  });
-
-  menuToggle.addEventListener('keydown', (e) => {
-    if(e.key === "Enter" || e.key === " ") {
-      e.preventDefault();
-      menuToggle.click();
-    }
-  });
-
-  document.addEventListener('click', (e) => {
-    if (!menuPanel.contains(e.target) && !menuToggle.contains(e.target)) {
-      menuPanel.classList.remove('open');
-      menuToggle.classList.remove('open');
-      menuToggle.setAttribute('aria-expanded', "false");
-    }
-  });
-
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > 10) {
-      document.querySelector('header').classList.add('scrolled');
-    } else {
-      document.querySelector('header').classList.remove('scrolled');
-    }
-  });
-</script>
+  <script>
+    const menuToggle = document.getElementById('menuToggle');
+    const menuPanel = document.getElementById('menuPanel');
+    menuToggle.addEventListener('click', () => {
+      menuToggle.classList.toggle('open');
+      menuPanel.classList.toggle('open');
+      menuToggle.setAttribute('aria-expanded', menuPanel.classList.contains('open'));
+    });
+    menuToggle.addEventListener('keydown', (e) => {
+      if(e.key === "Enter" || e.key === " ") {
+        e.preventDefault();
+        menuToggle.click();
+      }
+    });
+    document.addEventListener('click', (e) => {
+      if (!menuPanel.contains(e.target) && !menuToggle.contains(e.target)) {
+        menuPanel.classList.remove('open');
+        menuToggle.classList.remove('open');
+        menuToggle.setAttribute('aria-expanded', "false");
+      }
+    });
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 10) {
+        document.querySelector('header').classList.add('scrolled');
+      } else {
+        document.querySelector('header').classList.remove('scrolled');
+      }
+    });
+  </script>
 </body>
 </html>
-
