--- a/mobileabout.html
+++ b/mobileabout.html
@@ -110,11 +110,6 @@
       padding-left: 1rem;
       padding-right: 1rem;
       box-sizing: border-box;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 3.5rem;
-      justify-content: center;
-      align-items: flex-start;
     }
     .mission-section, .values-hero, .team-section {
       background: #22232c;
@@ -123,9 +118,10 @@
       padding: 2.5rem 2.2rem 2rem 2.2rem;
       box-sizing: border-box;
       width: 100%;
-      margin-bottom: 0;
-      max-width: 500px;
-      flex: 1 1 320px;
+      margin-bottom: 2.4rem;
+      max-width: 1000px;
+      margin-right: auto;
+      margin-left: auto;
     }
     .mission-section h2,
     .values-hero h2,
@@ -160,9 +156,13 @@
       flex-wrap: wrap;
       gap: 2.3rem;
       justify-content: center;
+      box-sizing: border-box;
+      width: 100%;
+      max-width: 100%;
     }
     .value-card, .team-member {
-      width: 255px;
+      width: 280px;
+      max-width: 95vw;
       background: #2a2b36;
       border-radius: 10px;
       padding: 2rem 1.3rem;
@@ -170,11 +170,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      transition: transform 0.3s cubic-bezier(.23,1.08,.66,.99), box-shadow 0.3s;
+      margin-bottom: 0;
+      box-sizing: border-box;
+      transition: transform 0.3s, box-shadow 0.3s;
       opacity: 0;
       transform: translateY(60px);
       animation: fadeUp 1s forwards;
-      margin-bottom: 0;
     }
     .value-card:nth-child(1), .team-member:nth-child(1){ animation-delay: 0.1s;}
     .value-card:nth-child(2), .team-member:nth-child(2){ animation-delay: 0.3s;}
@@ -226,39 +227,37 @@
     }
     @media (max-width: 1050px) {
       main {
-        flex-direction: column;
-        padding-top: 130px;
-        gap: 2rem;
+        padding-top: 105px;
       }
       .mission-section, .values-hero, .team-section { max-width: 97vw; }
     }
-    @media (max-width: 700px) {
-      header { padding: 1.2rem .7rem;}
-      main { gap: 1.7rem; }
-      .mission-section, .values-hero, .team-section {
-        padding: 1.2rem 1.5rem;
-        max-width: 90vw;
-      }
+    @media (max-width: 900px) {
       .values-grid, .team-grid {
         flex-direction: column;
         align-items: center;
-        gap: 1.1rem;
+        gap: 1.2rem;
       }
-      .value-card, .team-member { width: 95vw; }
-      .menu-toggle { display: flex; }
-      .menu-panel {
-        width: 90vw;
-        top: 70px;
-        height: calc(100% - 70px);
-        transform: translateX(100%);
-        pointer-events: none;
-        opacity: 1;
+      .value-card, .team-member {
+        width: 100%;
+        max-width: 98vw;
       }
-      .menu-panel.open {
-        transform: translateX(0);
-        pointer-events: auto;
+    }
+    @media (max-width: 540px) {
+      .value-card, .team-member {
+        padding: 1.1rem 0.7rem;
+        width: 100%;
+        max-width: 100vw;
       }
-      nav { display: none; }
+    }
+    @media (max-width: 700px) {
+      header { padding: 1.2rem .7rem;}
+      main {
+        padding-top: 70px;
+      }
+      .mission-section, .values-hero, .team-section {
+        padding: 1.2rem 1.5rem;
+        max-width: 98vw;
+      }
     }
   </style>
 </head>
