--- a/mobileabout.html
+++ b/mobileabout.html
@@ -103,6 +103,14 @@
       color: #2563eb;
       background: #22232c;
     }
+    nav { /* always hide nav on small screens */
+      display: flex;
+      gap: 2.8rem;
+      margin-top: 2.6rem;
+      align-items: flex-start;
+      padding-right: 3rem;
+      justify-content: flex-end;
+    }
     main {
       padding-top: 90px;
       max-width: 1100px;
@@ -232,6 +240,12 @@
       .mission-section, .values-hero, .team-section { max-width: 97vw; }
     }
     @media (max-width: 900px) {
+      nav {
+        display: none;
+      }
+      .menu-toggle {
+        display: flex;
+      }
       .values-grid, .team-grid {
         flex-direction: column;
         align-items: center;
