--- a/mobileabout.html
+++ b/mobileabout.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us - Nest Capital Finance</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:600,400&display=swap" rel="stylesheet"/>
-  <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Montserrat', Arial, sans-serif;
+      font-family: 'Fira Sans', Arial, sans-serif;
+      font-weight: 300;
       background: #181820;
       color: #e8e6ff;
       margin: 0;
@@ -26,7 +27,7 @@
       background: transparent;
       z-index: 1000;
       box-sizing: border-box;
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      transition: background-color 0.3s, box-shadow 0.3s;
     }
     header.scrolled {
       background-color: #181820;
@@ -38,7 +39,7 @@
       z-index: 1101;
     }
     .menu-toggle {
-      display: none;
+      display: flex;
       flex-direction: column;
       width: 30px;
       height: 22px;
@@ -53,15 +54,9 @@
       border-radius: 2px;
       transition: transform 0.3s, opacity 0.3s;
     }
-    .menu-toggle.open span:nth-child(1) {
-      transform: translateY(9px) rotate(45deg);
-    }
-    .menu-toggle.open span:nth-child(2) {
-      opacity: 0;
-    }
-    .menu-toggle.open span:nth-child(3) {
-      transform: translateY(-9px) rotate(-45deg);
-    }
+    .menu-toggle.open span:nth-child(1) { transform: translateY(9px) rotate(45deg);}
+    .menu-toggle.open span:nth-child(2) { opacity: 0;}
+    .menu-toggle.open span:nth-child(3) { transform: translateY(-9px) rotate(-45deg);}
     .menu-panel {
       position: fixed;
       top: 70px; right: 0;
@@ -102,14 +97,6 @@
     .menu-panel a:hover {
       color: #2563eb;
       background: #22232c;
-    }
-    nav { /* always hide nav on small screens */
-      display: flex;
-      gap: 2.8rem;
-      margin-top: 2.6rem;
-      align-items: flex-start;
-      padding-right: 3rem;
-      justify-content: flex-end;
     }
     main {
       padding-top: 90px;
@@ -204,9 +191,7 @@
       color: #2563eb;
       transition: color 0.3s;
     }
-    .value-card:hover .value-icon { 
-      color: #ffffff;
-    }
+    .value-card:hover .value-icon { color: #fff; }
     .value-title, .team-member h4 {
       font-size: 1.2rem;
       font-weight: 600;
@@ -230,22 +215,12 @@
       border: 2.3px solid #2563eb;
       transition: border-color 0.3s;
     }
-    .team-member:hover img {
-      border-color: #ffffff;
-    }
+    .team-member:hover img { border-color: #ffffff; }
     @media (max-width: 1050px) {
-      main {
-        padding-top: 105px;
-      }
+      main { padding-top: 105px;}
       .mission-section, .values-hero, .team-section { max-width: 97vw; }
     }
     @media (max-width: 900px) {
-      nav {
-        display: none;
-      }
-      .menu-toggle {
-        display: flex;
-      }
       .values-grid, .team-grid {
         flex-direction: column;
         align-items: center;
@@ -265,9 +240,7 @@
     }
     @media (max-width: 700px) {
       header { padding: 1.2rem .7rem;}
-      main {
-        padding-top: 70px;
-      }
+      main { padding-top: 70px;}
       .mission-section, .values-hero, .team-section {
         padding: 1.2rem 1.5rem;
         max-width: 98vw;
@@ -278,18 +251,18 @@
 <body>
   <header>
     <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
-    <div class="menu-toggle" id="menuToggle" aria-label="Toggle menu" tabindex="0" aria-expanded="false" role="button">
+    <div class="menu-toggle" id="menuToggle" aria-label="Toggle menu" tabindex="0" aria-expanded="false">
       <span></span>
       <span></span>
       <span></span>
     </div>
-    <nav id="menuPanel" class="menu-panel" aria-label="Primary navigation">
-      <a href="Services.html" tabindex="0">Services</a>
-      <a href="about.html#mission" tabindex="0">About</a>
-      <a href="#partners" tabindex="0">Partners</a>
-      <a href="resources.html" tabindex="0">Resources</a>
-      <a href="contact.html" tabindex="0">Contact</a>
-    </nav>
+    <div id="menuPanel" class="menu-panel" aria-label="Primary navigation">
+      <a href="Services.html">Services</a>
+      <a href="about.html#mission">About</a>
+      <a href="#partners">Partners</a>
+      <a href="resources.html">Resources</a>
+      <a href="contact.html">Contact</a>
+    </div>
   </header>
   <main>
     <section class="mission-section" id="mission">
@@ -371,25 +344,24 @@
   <script>
     const menuToggle = document.getElementById('menuToggle');
     const menuPanel = document.getElementById('menuPanel');
-    menuToggle.addEventListener('click', () => {
+    menuToggle.addEventListener('click', function() {
       menuToggle.classList.toggle('open');
       menuPanel.classList.toggle('open');
       menuToggle.setAttribute('aria-expanded', menuPanel.classList.contains('open'));
     });
-    menuToggle.addEventListener('keydown', (e) => {
+    menuToggle.addEventListener('keydown', function(e) {
       if(e.key === "Enter" || e.key === " ") {
-        e.preventDefault();
         menuToggle.click();
       }
     });
-    document.addEventListener('click', (e) => {
+    document.addEventListener('click', function(e) {
       if (!menuPanel.contains(e.target) && !menuToggle.contains(e.target)) {
         menuPanel.classList.remove('open');
         menuToggle.classList.remove('open');
         menuToggle.setAttribute('aria-expanded', "false");
       }
     });
-    window.addEventListener('scroll', () => {
+    window.addEventListener('scroll', function() {
       if (window.scrollY > 10) {
         document.querySelector('header').classList.add('scrolled');
       } else {
