--- a/mobileabout.html
+++ b/mobileabout.html
@@ -11,9 +11,8 @@
       font-family: 'Fira Sans', Arial, sans-serif;
       font-weight: 300;
       background: #181820;
-      color: #e8e6ff;
       margin: 0;
-      min-height: 100vh;
+      color: #fff;
       overflow-x: hidden;
     }
     header {
@@ -98,35 +97,37 @@
       color: #2563eb;
       background: #22232c;
     }
+    @media (max-width: 700px) {
+      header img {height: 46px;}
+      .menu-panel {width: 90vw;}
+      main {padding-left: 0 !important; padding-right: 0 !important;}
+      .value-card, .team-member {width: 90vw; max-width: 340px;}
+    }
     main {
       padding-top: 90px;
-      max-width: 1100px;
-      margin: 3.5rem auto 0 auto;
+      max-width: 1000px;
+      margin: 0 auto;
       padding-left: 1rem;
       padding-right: 1rem;
       box-sizing: border-box;
     }
     .mission-section, .values-hero, .team-section {
+      max-width: 980px;
+      margin: 2rem auto;
+      padding: 2rem 1.5rem;
       background: #22232c;
-      border-radius: 16px;
-      box-shadow: 0 1px 16px #0405121a;
-      padding: 2.5rem 2.2rem 2rem 2.2rem;
-      box-sizing: border-box;
-      width: 100%;
-      margin-bottom: 2.4rem;
-      max-width: 1000px;
-      margin-right: auto;
-      margin-left: auto;
+      border-radius: 14px;
+      box-shadow: 0 1px 12px #0405123a;
     }
-    .mission-section h2,
     .values-hero h2,
-    .team-section h2 {
-      text-align: center;
-      font-size: 2.2rem;
-      font-weight: 700;
+    .team-section h2,
+    .mission-section h2 {
+      font-size: 2.6rem;
+      margin-bottom: 2rem;
       color: #b6befb;
-      margin-bottom: 1rem;
-      letter-spacing: -1px;
+      text-align: center;
+      font-weight: 700;
+      letter-spacing: .015em;
     }
     .values-hero .subtitle {
       text-align: center;
@@ -172,12 +173,12 @@
       transform: translateY(60px);
       animation: fadeUp 1s forwards;
     }
-    .value-card:nth-child(1), .team-member:nth-child(1){ animation-delay: 0.1s;}
-    .value-card:nth-child(2), .team-member:nth-child(2){ animation-delay: 0.3s;}
-    .value-card:nth-child(3), .team-member:nth-child(3){ animation-delay: 0.5s;}
-    .value-card:nth-child(4), .team-member:nth-child(4){ animation-delay: 0.7s;}
-    .value-card:nth-child(5), .team-member:nth-child(5){ animation-delay: 0.9s;}
-    .value-card:nth-child(6), .team-member:nth-child(6){ animation-delay: 1.1s;}
+    .value-card:nth-child(1), .team-member:nth-child(1){ animation-delay: 0.11s;}
+    .value-card:nth-child(2), .team-member:nth-child(2){ animation-delay: 0.22s;}
+    .value-card:nth-child(3), .team-member:nth-child(3){ animation-delay: 0.33s;}
+    .value-card:nth-child(4), .team-member:nth-child(4){ animation-delay: 0.44s;}
+    .value-card:nth-child(5), .team-member:nth-child(5){ animation-delay: 0.55s;}
+    .value-card:nth-child(6), .team-member:nth-child(6){ animation-delay: 0.66s;}
     .value-card:hover, .team-member:hover {
       transform: scale(1.05);
       box-shadow: 0 10px 25px #4a4f7f80;
@@ -186,40 +187,35 @@
       to { opacity: 1; transform: translateY(0);}
     }
     .value-icon {
-      font-size: 2.7rem;
+      font-size: 3rem;
       margin-bottom: 1rem;
       color: #2563eb;
       transition: color 0.3s;
     }
     .value-card:hover .value-icon { color: #fff; }
     .value-title, .team-member h4 {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       font-weight: 600;
+      margin-bottom: .8rem;
       color: #b6befb;
       text-align: center;
-      margin-bottom: .7rem;
     }
     .value-desc, .team-member p {
-      font-size: 1.01rem;
+      font-size: 1.05rem;
       color: #c0c2d4;
       text-align: center;
       line-height: 1.5;
-      margin-bottom: 0.2rem;
     }
     .team-member img {
-      width: 98px;
-      height: 98px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 1.1rem;
-      border: 2.3px solid #2563eb;
+      margin-bottom: 1.2rem;
+      border: 3px solid #2563eb;
       transition: border-color 0.3s;
     }
     .team-member:hover img { border-color: #ffffff; }
-    @media (max-width: 1050px) {
-      main { padding-top: 105px;}
-      .mission-section, .values-hero, .team-section { max-width: 97vw; }
-    }
     @media (max-width: 900px) {
       .values-grid, .team-grid {
         flex-direction: column;
@@ -236,14 +232,6 @@
         padding: 1.1rem 0.7rem;
         width: 100%;
         max-width: 100vw;
-      }
-    }
-    @media (max-width: 700px) {
-      header { padding: 1.2rem .7rem;}
-      main { padding-top: 70px;}
-      .mission-section, .values-hero, .team-section {
-        padding: 1.2rem 1.5rem;
-        max-width: 98vw;
       }
     }
   </style>
