Make Loan Repayment Calculator card clickable

--- a/mobileresources.html
+++ b/mobileresources.html
@@ -498,11 +498,11 @@
       <h2>Home Loan Calculators</h2>
       <p class="section-intro">Use our free calculators to estimate repayments, borrowing capacity, and more—empowering you to plan your property journey with confidence.</p>
       <div class="resource-grid">
-        <div class="resource-card">
+        <a href="lrc.html"><div class="resource-card">
           <div class="resource-icon"><i class="ri-calculator-line"></i></div>
           <div class="resource-title">Loan Repayment Calculator</div>
           <div class="resource-desc">Estimate your monthly repayments based on loan amount, interest rate, and term.</div>
-        </div>
+        </div></a>
         <div class="resource-card">
           <div class="resource-icon"><i class="ri-money-dollar-circle-line"></i></div>
           <div class="resource-title">Borrowing Power Calculator</div>
