--- a/resources.html
+++ b/resources.html
@@ -170,6 +170,11 @@
       text-decoration: none;
       color: inherit;
     }
+          a {
+        text-decoration: none;
+        color: inherit;
+        display: block;
+      }
     .resource-card:nth-child(1){ animation-delay: 0.1s;}
     .resource-card:nth-child(2){ animation-delay: 0.3s;}
     .resource-card:nth-child(3){ animation-delay: 0.5s;}
