--- a/resources.html
+++ b/resources.html
@@ -507,8 +507,8 @@
         </div></a>
         <div class="resource-card">
           <div class="resource-icon"><i class="ri-money-dollar-circle-line"></i></div>
-          <div class="resource-title">Borrowing Power Calculator</div>
-          <div class="resource-desc">Find out how much you can borrow based on your income and expenses.</div>
+          <div class="resource-title">Equity Calculator</div>
+          <div class="resource-desc">Find out how much equity you have in your current property.</div>
         </div>
         <div class="resource-card">
           <div class="resource-icon"><i class="ri-percent-line"></i></div>
