--- a/newindex.html
+++ b/newindex.html
@@ -27,8 +27,8 @@
                     colors: {
                         // Primary Brand Colors (Deep Green & Sage)
                         brand: {
-                            900: '#0f2922', // Darkest Green (Header/Footer)
-                            800: '#1a4036', // Deep Green (Buttons/Accents)
+                            900: '#606060', // Darkest Green (Header/Footer)
+                            800: '#606060', // Deep Green (Buttons/Accents)
                             700: '#25594d', // Rich Green
                             600: '#337566', // Primary
                             100: '#eff5f4', // Light Sage Background
